--- a/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8150" systemVersion="15A204g" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8122"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -13,15 +15,42 @@
                         <viewControllerLayoutGuide type="bottom" id="xb3-aO-Qok"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <animations/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="space-sunrise.jpg" highlightedImage="star field" translatesAutoresizingMaskIntoConstraints="NO" id="FFZ-kb-ecw">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Life on Mars" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="9km-8z-uEu">
+                                <rect key="frame" x="155" y="570" width="200" height="77"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="200" id="QSz-wV-Bay"/>
+                                    <constraint firstAttribute="height" constant="77" id="WUA-vk-LzC"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-CondensedMedium" family="Futura" pointSize="50"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="FFZ-kb-ecw" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="05u-Zt-oEm"/>
+                            <constraint firstItem="FFZ-kb-ecw" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="47C-vN-p6B"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="9km-8z-uEu" secondAttribute="trailing" id="QcK-AN-saB"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="9km-8z-uEu" secondAttribute="bottom" constant="20" id="VPO-h7-hj2"/>
+                            <constraint firstItem="FFZ-kb-ecw" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="abO-VG-PR1"/>
+                            <constraint firstItem="FFZ-kb-ecw" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="zxU-Ni-KCZ"/>
+                        </constraints>
                     </view>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="17.5" y="374.5"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="space-sunrise.jpg" width="2560" height="1600"/>
+        <image name="star field" width="2000" height="1200"/>
+    </resources>
 </document>
