--- a/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z4P-eb-Ncf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z4P-eb-Ncf">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -8,10 +8,10 @@
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Rocket View Controller-->
         <scene sceneID="ZQC-86-w6S">
             <objects>
-                <viewController id="Z4P-eb-Ncf" sceneMemberID="viewController">
+                <viewController id="Z4P-eb-Ncf" customClass="RocketViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="wga-MW-hzI"/>
                         <viewControllerLayoutGuide type="bottom" id="yoB-TS-HZp"/>
@@ -20,28 +20,77 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" misplaced="YES" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="3sH-wa-RYA">
-                                <rect key="frame" x="37" y="135" width="301" height="512"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="ows-uq-e2t">
+                                <rect key="frame" x="0.0" y="-2668" width="375" height="3335"/>
                             </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="fire 2" translatesAutoresizingMaskIntoConstraints="NO" id="yjA-I4-K8N">
+                                <rect key="frame" x="157" y="574" width="60" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="cl1-xk-2PH"/>
+                                    <constraint firstAttribute="height" constant="80" id="yDq-Mg-ML6"/>
+                                </constraints>
+                            </imageView>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="3sH-wa-RYA">
+                                <rect key="frame" x="93" y="342" width="188" height="325"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="325" id="KGc-YH-nkm"/>
+                                    <constraint firstAttribute="width" secondItem="3sH-wa-RYA" secondAttribute="height" multiplier="188:325" id="mBq-Qd-nKN"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7By-xK-CMX">
+                                <rect key="frame" x="16" y="595" width="52" height="52"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="52" id="XCL-m0-vrU"/>
+                                    <constraint firstAttribute="height" constant="52" id="elD-Fy-cBJ"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="Red_button"/>
+                                <connections>
+                                    <action selector="redButtonTapped:" destination="Z4P-eb-Ncf" eventType="touchUpInside" id="GQg-Eb-fIy"/>
+                                </connections>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Launch!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JhJ-bl-nfK">
+                                <rect key="frame" x="12" y="570" width="60" height="22"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="60" id="lsI-o1-Y7E"/>
+                                    <constraint firstAttribute="height" constant="22" id="y4I-ha-LTL"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="3sH-wa-RYA" firstAttribute="width" secondItem="JA8-UG-agL" secondAttribute="height" multiplier="301:667" id="B7S-MV-iSU"/>
+                            <constraint firstItem="yjA-I4-K8N" firstAttribute="centerX" secondItem="JA8-UG-agL" secondAttribute="centerX" id="0TK-VE-nbP"/>
+                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="7By-xK-CMX" secondAttribute="bottom" constant="20" id="8ag-qV-bJk"/>
                             <constraint firstItem="3sH-wa-RYA" firstAttribute="centerX" secondItem="JA8-UG-agL" secondAttribute="centerX" id="CDw-s9-UUX"/>
-                            <constraint firstItem="3sH-wa-RYA" firstAttribute="width" secondItem="JA8-UG-agL" secondAttribute="width" multiplier="0.75" id="hit-HI-y8S"/>
-                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="3sH-wa-RYA" secondAttribute="bottom" constant="20" id="k48-qH-65N"/>
+                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="yjA-I4-K8N" secondAttribute="bottom" constant="13" id="Joy-eT-My9"/>
+                            <constraint firstItem="7By-xK-CMX" firstAttribute="leading" secondItem="JA8-UG-agL" secondAttribute="leadingMargin" id="LYS-b0-1rR"/>
+                            <constraint firstItem="JhJ-bl-nfK" firstAttribute="centerX" secondItem="7By-xK-CMX" secondAttribute="centerX" id="b7X-vn-jYX"/>
+                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="3sH-wa-RYA" secondAttribute="bottom" id="k48-qH-65N"/>
+                            <constraint firstItem="ows-uq-e2t" firstAttribute="width" secondItem="JA8-UG-agL" secondAttribute="width" id="kRa-LI-9AW"/>
+                            <constraint firstItem="7By-xK-CMX" firstAttribute="top" secondItem="JhJ-bl-nfK" secondAttribute="bottom" constant="3" id="pzO-Zm-qrY"/>
+                            <constraint firstItem="ows-uq-e2t" firstAttribute="leading" secondItem="JA8-UG-agL" secondAttribute="leading" id="voM-JD-v9I"/>
+                            <constraint firstItem="ows-uq-e2t" firstAttribute="height" secondItem="JA8-UG-agL" secondAttribute="height" multiplier="5" id="wOm-45-fDN"/>
+                            <constraint firstItem="yoB-TS-HZp" firstAttribute="top" secondItem="ows-uq-e2t" secondAttribute="bottom" id="wtw-G6-LIH"/>
                         </constraints>
-                        <variation key="default">
-                            <mask key="constraints">
-                                <exclude reference="B7S-MV-iSU"/>
-                            </mask>
-                        </variation>
                     </view>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
+                    <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+                    <size key="freeformSize" width="375" height="667"/>
+                    <connections>
+                        <outlet property="backgroundBottomConstraint" destination="wtw-G6-LIH" id="P5T-5I-hFo"/>
+                        <outlet property="backgroundImage" destination="ows-uq-e2t" id="iva-3a-ZFS"/>
+                        <outlet property="fireHeightConstraint" destination="yDq-Mg-ML6" id="0sn-f0-KWk"/>
+                        <outlet property="fireImage" destination="yjA-I4-K8N" id="Cpr-Zb-WsN"/>
+                        <outlet property="rocketHeightConstraint" destination="KGc-YH-nkm" id="UNh-Zc-iqb"/>
+                        <outlet property="rocketImage" destination="3sH-wa-RYA" id="suU-Xk-1ZS"/>
+                        <segue destination="mMp-kA-hJQ" kind="presentation" identifier="segueToSpace" id="lRm-PQ-VE7"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J7f-nc-lNu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-988.5" y="359.5"/>
+            <point key="canvasLocation" x="-1081.5" y="296.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="vYu-h5-nAJ">
@@ -55,8 +104,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" indicatorStyle="white" minimumZoomScale="0.80000000000000004" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="ayd-fl-YeR">
-                                <rect key="frame" x="-20" y="-20" width="375" height="667"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" ambiguous="YES" alwaysBounceVertical="YES" alwaysBounceHorizontal="YES" indicatorStyle="white" minimumZoomScale="0.80000000000000004" maximumZoomScale="2" translatesAutoresizingMaskIntoConstraints="NO" id="ayd-fl-YeR">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                                 <subviews>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4cz-z8-YbF">
                                         <rect key="frame" x="0.0" y="0.0" width="375" height="834"/>
@@ -274,6 +323,9 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Red_button" width="191" height="177"/>
+        <image name="background" width="1200" height="5374"/>
+        <image name="fire 2" width="100" height="146"/>
         <image name="mars no background" width="1200" height="675"/>
         <image name="rocket" width="512" height="512"/>
         <image name="star field" width="2000" height="1200"/>
