--- a/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
+++ b/Life on Mars/Life on Mars/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Z4P-eb-Ncf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="mMp-kA-hJQ">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -30,14 +30,6 @@
                                     <constraint firstAttribute="height" constant="80" id="yDq-Mg-ML6"/>
                                 </constraints>
                             </imageView>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="3sH-wa-RYA">
-                                <rect key="frame" x="93" y="342" width="188" height="325"/>
-                                <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="325" id="KGc-YH-nkm"/>
-                                    <constraint firstAttribute="width" secondItem="3sH-wa-RYA" secondAttribute="height" multiplier="188:325" id="mBq-Qd-nKN"/>
-                                </constraints>
-                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7By-xK-CMX">
                                 <rect key="frame" x="16" y="595" width="52" height="52"/>
                                 <constraints>
@@ -59,6 +51,14 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFit" image="rocket" translatesAutoresizingMaskIntoConstraints="NO" id="3sH-wa-RYA">
+                                <rect key="frame" x="93" y="342" width="188" height="325"/>
+                                <gestureRecognizers/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="325" id="KGc-YH-nkm"/>
+                                    <constraint firstAttribute="width" secondItem="3sH-wa-RYA" secondAttribute="height" multiplier="188:325" id="mBq-Qd-nKN"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
@@ -83,14 +83,15 @@
                         <outlet property="backgroundImage" destination="ows-uq-e2t" id="iva-3a-ZFS"/>
                         <outlet property="fireHeightConstraint" destination="yDq-Mg-ML6" id="0sn-f0-KWk"/>
                         <outlet property="fireImage" destination="yjA-I4-K8N" id="Cpr-Zb-WsN"/>
+                        <outlet property="rocketBottomConstraint" destination="k48-qH-65N" id="ldo-rV-hMJ"/>
                         <outlet property="rocketHeightConstraint" destination="KGc-YH-nkm" id="UNh-Zc-iqb"/>
                         <outlet property="rocketImage" destination="3sH-wa-RYA" id="suU-Xk-1ZS"/>
-                        <segue destination="mMp-kA-hJQ" kind="presentation" identifier="segueToSpace" id="lRm-PQ-VE7"/>
+                        <segue destination="mMp-kA-hJQ" kind="show" identifier="segueToSpace" id="SI9-BM-xwa"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="J7f-nc-lNu" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1081.5" y="296.5"/>
+            <point key="canvasLocation" x="-244.5" y="366.5"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="vYu-h5-nAJ">
@@ -118,8 +119,8 @@
                                     <constraint firstItem="4cz-z8-YbF" firstAttribute="leading" secondItem="ayd-fl-YeR" secondAttribute="leading" id="ybM-DX-pmd"/>
                                 </constraints>
                             </scrollView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pcf-Bq-aS4" userLabel="title">
-                                <rect key="frame" x="54" y="617" width="267" height="50"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pcf-Bq-aS4" userLabel="title">
+                                <rect key="frame" x="54" y="20" width="267" height="50"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="50" id="jVn-b1-DBn"/>
                                 </constraints>
@@ -127,59 +128,86 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYn-Ci-TUq" userLabel="info">
-                                <rect key="frame" x="321" y="613" width="44" height="44"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MYn-Ci-TUq" userLabel="info">
+                                <rect key="frame" x="311" y="603" width="44" height="44"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="44" id="PJW-RE-HEd"/>
                                     <constraint firstAttribute="height" constant="44" id="wbh-7e-6q7"/>
                                 </constraints>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <state key="normal" image="transport"/>
                                 <connections>
-                                    <action selector="infoTapped:" destination="mMp-kA-hJQ" eventType="touchUpInside" id="RR9-BX-hOY"/>
+                                    <action selector="spaceshipTapped:" destination="mMp-kA-hJQ" eventType="touchUpInside" id="xmm-gC-yC4"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="v8i-mS-yGB" userLabel="rocket">
-                                <rect key="frame" x="10" y="613" width="44" height="44"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" axis="vertical" distribution="fillEqually" alignment="center" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="tAQ-f5-nON" userLabel="button stack">
+                                <rect key="frame" x="315" y="485" width="44" height="98"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fbE-OJ-boe" userLabel="mars">
+                                        <rect key="frame" x="0.0" y="0.0" width="44" height="44"/>
+                                        <state key="normal" title="Button" image="marsIcon"/>
+                                        <connections>
+                                            <segue destination="gF0-xh-Kng" kind="presentation" id="833-Xu-8WO"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="infoLight" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Kii-t9-EDr" userLabel="info">
+                                        <rect key="frame" x="11" y="54" width="22" height="44"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="20"/>
+                                        <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <connections>
+                                            <action selector="infoTapped:" destination="mMp-kA-hJQ" eventType="touchUpInside" id="Dr2-h4-X74"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="44" id="hGL-kq-h3f"/>
-                                    <constraint firstAttribute="width" constant="44" id="rNT-l4-JDK"/>
+                                    <constraint firstAttribute="width" constant="44" id="al7-Ga-ujF"/>
+                                    <constraint firstAttribute="height" constant="98" id="dIj-4j-I5o"/>
                                 </constraints>
-                                <state key="normal" title="Button" image="rocket"/>
-                                <connections>
-                                    <action selector="rocketTapped:" destination="mMp-kA-hJQ" eventType="touchUpInside" id="gfH-4O-QUh"/>
-                                    <segue destination="gF0-xh-Kng" kind="presentation" identifier="segueToMars" id="uLf-M4-Mqi"/>
-                                </connections>
-                            </button>
+                            </stackView>
                         </subviews>
                         <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="height" secondItem="kmw-ve-JYc" secondAttribute="height" id="7fH-pl-lKj"/>
+                            <constraint firstItem="Pcf-Bq-aS4" firstAttribute="top" secondItem="l8M-Rs-I36" secondAttribute="bottom" id="9sz-81-SHL"/>
                             <constraint firstItem="Pcf-Bq-aS4" firstAttribute="centerX" secondItem="kmw-ve-JYc" secondAttribute="centerX" id="C5L-g8-UaE"/>
                             <constraint firstItem="4cz-z8-YbF" firstAttribute="width" relation="greaterThanOrEqual" secondItem="kmw-ve-JYc" secondAttribute="width" id="D84-bM-YFI"/>
-                            <constraint firstAttribute="trailing" secondItem="MYn-Ci-TUq" secondAttribute="trailing" constant="10" id="GFe-Zc-8WA"/>
-                            <constraint firstItem="fZc-BQ-nQS" firstAttribute="top" secondItem="MYn-Ci-TUq" secondAttribute="bottom" constant="10" id="LzN-dq-14C"/>
+                            <constraint firstItem="fZc-BQ-nQS" firstAttribute="top" secondItem="tAQ-f5-nON" secondAttribute="bottom" constant="84" id="E5F-5Z-302"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="tAQ-f5-nON" secondAttribute="trailing" id="GEe-ad-Omd"/>
+                            <constraint firstAttribute="trailing" secondItem="MYn-Ci-TUq" secondAttribute="trailing" constant="20" id="GFe-Zc-8WA"/>
+                            <constraint firstItem="fZc-BQ-nQS" firstAttribute="top" secondItem="MYn-Ci-TUq" secondAttribute="bottom" constant="20" id="LzN-dq-14C"/>
                             <constraint firstItem="fZc-BQ-nQS" firstAttribute="top" secondItem="Pcf-Bq-aS4" secondAttribute="bottom" id="Ufx-M3-vxB"/>
+                            <constraint firstItem="tAQ-f5-nON" firstAttribute="centerX" secondItem="MYn-Ci-TUq" secondAttribute="centerX" id="VoL-Te-pUr"/>
                             <constraint firstItem="4cz-z8-YbF" firstAttribute="height" secondItem="kmw-ve-JYc" secondAttribute="height" multiplier="1.25" id="YGR-Kc-Tnf"/>
-                            <constraint firstItem="fZc-BQ-nQS" firstAttribute="top" secondItem="v8i-mS-yGB" secondAttribute="bottom" constant="10" id="Yl9-qO-gOo"/>
-                            <constraint firstItem="v8i-mS-yGB" firstAttribute="leading" secondItem="kmw-ve-JYc" secondAttribute="leading" constant="10" id="b8v-cN-8DP"/>
+                            <constraint firstItem="MYn-Ci-TUq" firstAttribute="top" secondItem="tAQ-f5-nON" secondAttribute="bottom" constant="20" id="kZO-kc-ft4"/>
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="centerX" secondItem="kmw-ve-JYc" secondAttribute="centerX" id="kp9-3L-sgM"/>
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" id="mko-bf-ZfA"/>
                             <constraint firstItem="Pcf-Bq-aS4" firstAttribute="width" secondItem="kmw-ve-JYc" secondAttribute="width" constant="-108" id="nz6-2U-xf2"/>
                             <constraint firstItem="ayd-fl-YeR" firstAttribute="centerY" secondItem="kmw-ve-JYc" secondAttribute="centerY" id="xzr-yu-4uI"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="GEe-ad-Omd"/>
+                                <exclude reference="VoL-Te-pUr"/>
+                                <exclude reference="Ufx-M3-vxB"/>
+                                <exclude reference="kZO-kc-ft4"/>
+                            </mask>
+                        </variation>
                     </view>
+                    <navigationItem key="navigationItem" id="EOc-W8-dLv"/>
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="APODImage" destination="4cz-z8-YbF" id="VuH-0V-mcY"/>
-                        <outlet property="infoButton" destination="MYn-Ci-TUq" id="wv2-t3-m0g"/>
-                        <outlet property="rocketBottomConstraint" destination="Yl9-qO-gOo" id="pYo-hT-Njy"/>
+                        <outlet property="buttonStackRightConstraint" destination="GEe-ad-Omd" id="2Vs-Vg-sps"/>
+                        <outlet property="buttonStackView" destination="tAQ-f5-nON" id="LoA-W8-fAU"/>
+                        <outlet property="infoButton" destination="Kii-t9-EDr" id="PzB-Ph-G3Z"/>
                         <outlet property="scrollView" destination="ayd-fl-YeR" id="qky-oe-HIK"/>
+                        <outlet property="spaceshipButton" destination="MYn-Ci-TUq" id="lUY-ID-lq2"/>
                         <outlet property="titleLabel" destination="Pcf-Bq-aS4" id="sk1-q2-IyY"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Q4X-ap-wkQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-538.5" y="366.5"/>
+            <point key="canvasLocation" x="273.5" y="366.5"/>
         </scene>
         <!--Mars View Controller-->
         <scene sceneID="wpP-Lc-RII">
@@ -319,7 +347,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="13p-zj-Qbl" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="L0V-Pj-wq6" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="101.5" y="261.5"/>
+            <point key="canvasLocation" x="913.5" y="261.5"/>
         </scene>
     </scenes>
     <resources>
@@ -327,8 +355,10 @@
         <image name="background" width="1200" height="5374"/>
         <image name="fire 2" width="100" height="146"/>
         <image name="mars no background" width="1200" height="675"/>
+        <image name="marsIcon" width="512" height="512"/>
         <image name="rocket" width="512" height="512"/>
         <image name="star field" width="2000" height="1200"/>
         <image name="sun" width="612" height="612"/>
+        <image name="transport" width="512" height="512"/>
     </resources>
 </document>
